# knowledge_base_API

./: .gitignore  Dockerfile.api  Dockerfile.api.uv  Dockerfile.worker  Dockerfile.worker.uv  README.md  docker-compose.uv.yml  docker-compose.yml  entrypoint.sh  entrypoint.worker.sh  generate_api_key.py  generate_encryption_key.py  migrate_redis_to_postgres.py  pyproject.toml  requirements.txt  run_api.py  run_flower.sh  run_local.sh  run_worker.py  run_worker_qdrant.py  run_worker_redis.py  setup.sh  start_services.sh  supervisord.conf  supervisord.worker.conf
app/: __init__.py  main.py
app/api/: __init__.py  endpoints.py
app/celery/: __init__.py  tasks_email.py  tasks_embedding.py  tasks_embedding_aws_s3.py  tasks_embedding_azure.py  tasks_embedding_custom.py  tasks_embedding_mail.py  tasks_embedding_sharepoint.py  worker.py
app/core/: CloudflareR2.py  __init__.py  auth.py  config.py  const.py  hybrid_cache.py  interfaces.py  milvus.py  postgres_cache.py  qdrant.py  redis.py  snowflake.py
app/models/: __init__.py  email.py  job.py  qdrant_mail.py  task_config.py
app/services/: __init__.py  embedding_service.py  embedding_service_milvus.py  embedding_service_qdrant.py  mock_service.py  mock_subject_service.py  openai_service.py
app/templates/: custom_swagger_ui.html
app/utils/: text_chunker.py  text_utils.py
app/worker/: __init__.py  interfaces.py  job_worker.py  notifier.py  notifier_factory.py  processors.py  processors_file_azure.py  processors_file_common.py  processors_file_custom.py  processors_file_mail.py  processors_file_s3.py  processors_file_sharepoint.py  processors_s3.py  repository.py  repository_hybrid.py  repository_milvus.py  repository_postgres.py  (+7 more)
config/: settings copy.yaml  settings.example.yaml  settings.yaml
(+10 files in other folders)
