[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mail-analyzer-api"
version = "0.1.0"
description = "Mail Analysis API for processing and analyzing emails"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    # API Framework
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",

    # Async HTTP Client
    "httpx>=0.24.0",
    "aiohttp>=3.8.5",

    # Task Queue
    "redis>=4.6.0",
    "celery>=5.3.0",
    "celery[redis]>=5.3.0",
    "flower>=1.0.0",
    "asyncpg>=0.30.0",
    "uvloop>=0.21.0",
    "httptools>=0.6.4",


    # File Processing
    "python-magic>=0.4.27",
    "python-docx>=0.8.11",
    "python-pptx>=0.6.21",
    "html2text>=2024.2.26",
    "pandas>=2.2.3",
    "pymupdf4llm>=0.0.21",
    "PyCryptodome>=3.17",
    "openpyxl>=3.1.2",

    #Integration
    "openai>=1.0.0",
    "qdrant-client>=1.13.3",
    "fastembed>=0.6.1",
    "FlagEmbedding>=1.3.4",

    # Security
    "cryptography>=40.0.1",
    "pyjwt>=2.6.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "loguru>=0.6.0",
    "python-dateutil>=2.8.2",
    "pytz>=2023.3",

    # Monitoring
    "prometheus-client>=0.16.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.3.1",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "debugpy>=1.6.5",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
asyncio_mode = "auto"

# uv configuration is handled automatically
